fixed css bug caused by homepage image frame
There used to be a bug on the homepage that messed up the whole frontend for mobile devices
Ideally when sliding horizontally, CSS will take care of the logic and will not show the whitespace underneath
But the homepage image frame was setting a margin which pushed it off of the screen causing it to show the white space when sliding horizontally. I fixed it by adding padding instead of a margin.

p.s. most was just trial and error 💀

--- a/src/Components/Frame/HeroFrame.css
+++ b/src/Components/Frame/HeroFrame.css
@@ -5,10 +5,8 @@
     justify-content: center;
     align-items: flex-start;
     padding: 30px 40px 40px;
-    margin-bottom: 50px;
-
     width: 60%;
-
+    margin: 0 auto;
 }
 
 .circles {
@@ -42,8 +40,8 @@
 .image-header {
     align-items: flex-start;
 	display:flex;
-    margin-left: 60px;
     margin-top: 20px;
+    padding-left: 50px;
     min-width: 365px;
 }
 
