--- a/src/Pages/Home/home.css
+++ b/src/Pages/Home/home.css
@@ -43,7 +43,6 @@
 .home-hero-frame {
   padding-top: 30px;
   position: relative;
-  left:20%;
 }
 
 
